Fix position of trophy icon on small thumbs.

--- a/astrobin/static/css/astrobin.less
+++ b/astrobin/static/css/astrobin.less
@@ -1068,6 +1068,7 @@ ul.astrobin-thumbnails {
     margin-left: 0;
 }
 li.astrobin-thumbnail {
+    position: relative;
     padding: 2px;
     margin: 0;
     border: 0;
